# rusty-openai

./: Cargo.toml  TODO  justfile  readme.md
openai_api_client/: Cargo.toml
openai_api_client/src/: chat.rs  completion.rs  lib.rs  models.rs
openaiapi/: Cargo.toml  README.md
openaiapi/docs/: CreateAnswerRequest.md  CreateAnswerRequestStop.md  CreateChatCompletionResponseChoicesInner.md  CreateClassificationRequest.md  CreateClassificationResponseSelectedExamplesInner.md  CreateCompletionRequest.md  CreateCompletionRequestPrompt.md  CreateCompletionRequestStop.md  CreateEditResponse.md  CreateEmbeddingResponseDataInner.md  CreateFineTuneRequest.md  CreateModerationRequestInput.md  CreateModerationResponse.md  CreateModerationResponseResultsInner.md  CreateSearchRequest.md  Engine.md  ListFineTunesResponse.md  ListModelsResponse.md  OpenAiApi.md
openaiapi_generated/.openapi-generator/: FILES
openaiapi_generated/docs/: ChatCompletionRequestMessage.md  ChatCompletionResponseMessage.md  CreateAnswerResponse.md  CreateChatCompletionRequest.md  CreateChatCompletionRequestStop.md  CreateChatCompletionResponse.md  CreateClassificationResponse.md  CreateCompletionResponse.md  CreateCompletionResponseChoicesInner.md  CreateCompletionResponseChoicesInnerLogprobs.md  CreateEditRequest.md  CreateEmbeddingRequest.md  CreateEmbeddingRequestInput.md  CreateEmbeddingResponse.md  CreateModerationRequest.md  CreateModerationResponseResultsInnerCategoryScores.md  (+8 more)
runner/: Cargo.toml
specs/: openaiapi.yml
src/: main.rs
term_chat/: Cargo.toml
term_chat/src/: bot.rs  main.rs
(+58 files in other folders)
